# yahoo-ffb-api

./: .env.example  .gitignore  GETTING_STARTED.md  README.md  pyproject.toml
tests/: conftest.py  test_auth.py
yfa/: __init__.py  analysis.py  auth.py  cli.py  client.py  config.py  http.py
yfa/endpoints/: __init__.py  drafts.py  leagues.py  players.py  teams.py  users.py
yfa/models/: __init__.py  common.py  detailed_matchup.py  draft.py  league.py  matchup.py  player.py  roster.py  scoring.py  team.py
